# prompts-cli

./: .release-please-manifest.json  AGENTS.md  Cargo.toml  EVAL.md  GEMINI.md  PRD-cli.md  PRD-tauri.md  PRD.md  README.md  TODO.md  prompts.json  prompts_temp.json  release-please-config.json  release.toml
.cargo/: config.toml
.github/workflows/: build.yml  cargolock.yml  prepare-release.yml  publish.yml  release-please.yml  release.yml  staging-ci.yml
prompts-cli/: Cargo.toml
prompts-cli/src/: error.rs  lib.rs  main.rs  storage.rs
prompts-cli/src/core/: mod.rs
prompts-cli/tests/: cli.rs  config.rs  generate.rs  import_export.rs  prompt.rs  prompts_api.rs  search.rs  storage.rs
prompts-core/: Cargo.toml
prompts-core/src/: lib.rs
prompts-core/tests/: search.rs
prompts-tauri/: Cargo.toml
prompts-tui/: Cargo.toml
prompts-tui/src/: lib.rs  main.rs
src/: lib.rs  main.rs  tui.rs
src/core/: mod.rs
tests/: cli.rs
