[package]
name = "prompts"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"

[lib]
name = "prompts_core"
path = "src/lib.rs"

[[bin]]
name = "prompts"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.20.0"
