[package]
name = "prompts-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
crossterm = { version = "0.27.0", optional = true }
ratatui = { version = "0.26.0", optional = true }
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.88"

[features]
tui = ["dep:crossterm", "dep:ratatui"]

[lib]
name = "prompts_core"
path = "src/lib.rs"

[[bin]]
name = "prompts-cli"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.20.0"

[target.'cfg(not(windows))'.dev-dependencies]
pty-process = "0.5.3"
