[package]
name = "prompts-cli"
version = "0.1.1"
edition = "2021"
description = "A CLI for managing prompts for large language models."
license = "MIT"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.88"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.20.0"

[[bin]]
name = "prompts-cli"
path = "src/main.rs"