[package]
name = "prompts-cli"
version = "0.1.2"
edition = "2021"
description = "A CLI for managing prompts for large language models."
license = "MIT"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.41", features = ["derive"] }
directories = "5.0.1"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.20.0"

[[bin]]
name = "prompts-cli"
path = "src/main.rs"