[package]
name = "prompts_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "prompts_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.88"
clap = { version = "4.5.41", features = ["derive"] }