[package]
name = "prompts-tauri"
version = "0.1.0"
edition = "2021"
description = "A Tauri app for managing prompts for large language models."
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6.8", features = [ "shell-open"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "prompts-tauri"
path = "src/main.rs"
