[package]
name = "prompts-tui"
version = "0.1.0"
edition = "2021"
description = "A TUI for managing prompts for large language models."
license = "MIT"

[dependencies]
anyhow = "1.0.98"
crossterm = "0.27.0"
ratatui = "0.26.0"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "prompts-tui"
path = "src/main.rs"
